--- a/rp-ws128touch/Cargo.toml
+++ b/rp-ws128touch/Cargo.toml
@@ -27,7 +27,7 @@ gc9a01a = "0.1.1"
 display-interface = "0.4.1"
 display-interface-spi = "0.4.1"
 embedded-graphics = "0.8.1"
-waypoint = { path = "../waypoint" }
+waypoint = { path = "../waypoint-core" }
 
 # cargo build/run
 [profile.dev]
