--- a/rp-ws128touch/Cargo.toml
+++ b/rp-ws128touch/Cargo.toml
@@ -8,6 +8,10 @@ license = "MIT OR Apache-2.0"
 cortex-m = "0.7"
 cortex-m-rt = "0.7"
 embedded-hal = { version = "1.0.0" }
+embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.7", features = [
+  "unproven",
+] }
+embedded-alloc = "0.5.1"
 
 defmt = "0.3"
 defmt-rtt = "0.4"
