--- a/rp-ws128touch/Cargo.toml
+++ b/rp-ws128touch/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+dsp = { path = "../dsp" }
 cortex-m = "0.7"
 cortex-m-rt = "0.7"
 embedded-hal = { version = "1.0.0" }
@@ -32,6 +33,25 @@ display-interface = "0.4.1"
 display-interface-spi = "0.4.1"
 embedded-graphics = "0.8.1"
 waypoint = { path = "../waypoint-core" }
+embassy-executor = { version = "0.6.0", features = [
+  "task-arena-size-98304",
+  "arch-cortex-m",
+  "executor-thread",
+  "executor-interrupt",
+  "defmt",
+  "integrated-timers",
+] }
+embassy-rp = { version = "0.2.0", features = [
+  "defmt",
+  "unstable-pac",
+  "time-driver",
+  "critical-section-impl",
+  "rp2040",
+] }
+embassy-time = { version = "0.3.2", features = [
+  "defmt",
+  "defmt-timestamp-uptime",
+] }
 
 # cargo build/run
 [profile.dev]
