--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
 [workspace]
-members = ["dsp", "rp-ws128-touch", "rp-ws128touch", "waypoint-core", "waypoint-mock"]
-resolver = "2"
+members = ["dsp", "rp-ws128-touch", "waypoint-core", "waypoint-mock"]
+default-members = ["rp-ws128-touch"]
+resolver = "1"
