--- a/rp-ws128-touch/.cargo/config.toml
+++ b/rp-ws128-touch/.cargo/config.toml
@@ -2,7 +2,7 @@
 # Choose a default "cargo run" tool (see README for more info)
 # - `probe-rs` provides flashing and defmt via a hardware debugger, and stack unwind on panic
 # - elf2uf2-rs loads firmware over USB when the rp2040 is in boot mode
-# runner = "probe-rs run --chip RP2040 --protocol swd"
+# runner = "probe-rs run --chip RP2040_SELFDEBUG"
 # runner = "elf2uf2-rs -d"
 runner = "elf2uf2-rs -d -s"
 rustflags = [
@@ -29,4 +29,4 @@ rustflags = [
 target = "thumbv6m-none-eabi"
 
 [env]
-DEFMT_LOG = "debug"
+DEFMT_LOG = "info"
