--- a/rp-ws128-touch/Cargo.toml
+++ b/rp-ws128-touch/Cargo.toml
@@ -30,8 +30,9 @@ embassy-rp = { version = "0.2.0", features = [
 defmt = "0.3"
 defmt-rtt = "0.4"
 
-cortex-m = { version = "0.7.7", features = ["inline-asm"] }
+cortex-m = { version = "0.7.6", features = ["inline-asm"] }
 cortex-m-rt = "0.7.0"
+critical-section = "1.1"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 
 
